# DumbOP

./: BUGS  CHANGELOG  FILES  Makefile  Makefile.in  README  TODO  config.cache  config.status  configure  configure.in
rip/: do.sh  main.cc  trivia.questions  trivia.questions.quiz
rip/country-codes/: country-codes.quiz  country-codes.txt  main.cc
rip/mox/: do.sh  main  main.cc  questions.imran.en  questions.trivia.en  questions.trivia2.en  questions.user.en
src/: Makefile  Makefile.in  ansi.cc  ansi.h  bot.cc  bot.h  channel.cc  channel.h  channelcommands.cc  channellist.cc  channellist.h  commands.cc  commands.h  config.cc  config.h  connection.cc  connection.h  ctcp.cc  ctcp.h  dccconnection.cc  dccparser.cc  dccparser.h  dccperson.cc  dccperson.h  flags.cc  flags.h  gamecommands.cc  gamequiz.cc  gamequiz.h  games.cc  games.h  log.cc  log.h  main.cc  managercommands.cc  mask.cc  mask.h  message.h  note.cc  note.h  (+46 more)
src/bot/: Makefile.in  class.cc  crap.cc  run.cc
src/channels/: Makefile  Makefile.in  channel.cc  list.cc  person.cc
src/commands/: Makefile  Makefile.in  channel.cc  connection.cc  dcc.cc  game.cc  general.cc  manager.cc  user.cc
src/commands/channel/: Makefile.in  ban.cc  banlist.cc  cycle.cc  deban.cc  deop.cc  invite.cc  join.cc  keep.cc  kick.cc  mode.cc  op.cc  part.cc  rules.cc  topic.cc  voice.cc
src/commands/connection/: Makefile.in  addserver.cc  delserver.cc  die.cc  do.cc  nextserver.cc  nick.cc  raw.cc  reconnect.cc  say.cc  server.cc  serverlist.cc
src/commands/dcc/: Makefile.in  dcclist.cc
src/commands/game/: Makefile.in  answer.cc  category.cc  clue.cc  give.cc  hint.cc  repeat.cc
src/commands/general/: Makefile.in  help.cc  lastseen.cc  note.cc  ping.cc  stats.cc  test.cc  time.cc
src/commands/manager/: Makefile.in  alias.cc  names.cc  save.cc  userlist.cc
src/commands/user/: Makefile.in  access.cc  identify.cc  nslookup.cc  password.cc  register.cc
src/common/: Makefile.in  log.cc  sha1.cc  utils.cc
src/common/strings/: Makefile.in  class.cc  tokens.cc  utils.cc
src/dcc/: Makefile  Makefile.in  connection.cc  person.cc
src/games/: Makefile  Makefile.in  class.cc  parser.cc  quiz.cc
src/games/quiz/: Makefile  Makefile.in  (+10 more)
src/garbage/: Makefile.in  class.cc
src/include/: acconfig.h  ansi.h  banentry.h  bot.h  channel.h  channellist.h  commands.h  config.h  config.h.in  connection.h  ctcp.h  dccconnection.h  dccperson.h  flags.h  gamequiz.h  games.h  garbage.h  log.h  macros.h  mask.h  message.h  note.h  notelist.h  parser.h  person.h  server.h  serverconnection.h  serverlist.h  serverqueue.h  serverqueueitem.h  signals.h  smtp.h  snmp.h  socket.h  strings.h  telnet.h  telnetdialogue.h  telnetspy.h  todolist.h  user.h  (+5 more)
src/irc/: Makefile.in  banentry.cc  connection.cc  ctcp.cc  person.cc  server.cc  serverconnection.cc
src/notes/: Makefile  Makefile.in  list.cc  note.cc
src/parser/: Makefile  Makefile.in  class.cc  commands.cc  ctcp.cc  message.cc  numerics.cc
src/queue/: Makefile  Makefile.in  item.cc  send.cc  serverqueue.cc
src/smtp/: Makefile.in  NOTES  address.cc  class.cc  message.cc  parser.cc
src/snmp/: Makefile.in  SNMP.txt  class.cc
src/strings/: Makefile  Makefile.in  class.cc  tokens.cc  utils.cc
src/system/: Makefile  Makefile.in  signals.cc  socket.cc
src/telnet/: Makefile  Makefile.in  ansi.cc  class.cc  descriptor.cc  monitor.cc  spy.cc
src/users/: Makefile  Makefile.in  item.cc  list.cc  user.cc
src/utils/: Makefile  Makefile.in  ansi.cc  class.cc  sha1.cc  sha1.h
test/: bot.channels  bot.channels.maybe  bot.conf  bot.help  bot.init  bot.users  bot.users.shouldbe
test/quiz/: Animals and Nature.quiz  Arts and Literature.quiz  Astronomy.quiz  Australiana.quiz  Cartoons.quiz  Entertainment.quiz  Geography.quiz  History.quiz  Literature.quiz  Maths.quiz  Music.quiz  Mythology and Religion.quiz  Psych.quiz  Puters.quiz  Sci-fi.quiz  Science and Medicine.quiz  Science.quiz  Sports.quiz  TREK.quiz  Technology.quiz  Test.quiz  Totally Unrelated Stuff That Will Probably Confuse Us All.quiz  questions.imran.en.quiz  questions.lst  questions.trivia.en.quiz  questions.trivia2.en.quiz  relig.quiz
test/t/: Australiana.quiz
(+145 files in other folders)
